# Nmap Changelog ($Id$); -*-text-*-

o [Ncat] Make --exec and --idle-timeout work when connecting with
  --proxy. Florian Roth reported the bug. [David]

o [NSE] Added broadcast-dropbox-listener.nse, which listens for
  Dropbox LanSync broadcasts and can optionally add discovered hosts
  to the scan queue. [Ron Bowes, Mak Kolybabi, Andrew Orr, Russ Tait
  Milne]

o [NSE] Created a new "broadcast" script category. This is the new
  home for the broadcast-* scripts, which do discovery by broadcasting
  on the local network (but may not relate to the targets listed on
  the command line). The broadcast scripts that were in the
  "discovery" category have been taken out of that category so that
  scans like --script=discovery don't include them by default.

o Integrated cracked passwords from the Gawker.com compromise
  (http://seclists.org/nmap-dev/2010/q4/674) into
  Nmap's top-5000 password database. A team of Nmap developers, lead
  by Brandon Enright has cracked 635,546 out of 748,081 password
  hashes so far (85%). Gawker users' top passwords are are "123456",
  "password", "12345678", "lifehack", "qwerty", "abc123", "12345",
  "monkey", "111111", "consumer", and "letmein".

o Added a service probe for master servers of Quake 3 and other games.
  [Toni Ruotto]

o [NSE] Added nrpe-enum.nse by Mak Kolybabi, which shows information
  from the Nagios Remote Plugin Executor service.

o [NSE] Created an ftp.lua library. [David]

o [NSE] Added gopher-ls.nse by Toni Ruotto, which lists the root of a
  Gopher server.

o [NSE] Added modbus-discover.nse by Alexander Rudakov. This script
  enumerates Modbus slave ids and then tries to find device
  information about each of them.

o [NSE] Added scripts by Toni Ruotto communicating with the NetBus
  remote administration/backdoor program.
  - netbus-info: gets configuration information.
  - netbus-brute: guesses passwords.
  - netbus-version: distinguishes NetBus from NetBuster, a program